Fix editor title z-index -- no longer overlaps corner notifcations

--- a/src/styles/editor/editor.css
+++ b/src/styles/editor/editor.css
@@ -74,7 +74,7 @@
 }
 
 .editor-title {
-  z-index: 10;
+  z-index: 1;
   position: absolute;
   top: 0;
   text-align: center;
